# lw-project-stock-simulator

./: .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: commiter.md
.claude/commands/: commit.md
.claude/rules/: data.md  engine.md  ui.md
backend/: .env.example  Dockerfile  manage.py  pyproject.toml
backend/apps/backtests/: api.py  schemas.py  serializers.py
backend/apps/market_data/: api.py  schemas.py
backend/config/: urls.py
backend/config/settings/: base.py
backend/core/data/: cache.py  fetcher.py
backend/core/engine/: backtest.py
backend/tests/: test_backtest.py  test_portfolio.py  test_signals.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/charts/: AssetChart.tsx  ComparisonChart.tsx
frontend/src/components/forms/: BacktestForm.tsx
frontend/src/components/metrics/: MetricsCards.tsx
frontend/src/components/tables/: TradeTable.tsx
frontend/src/features/backtest/: BacktestDashboard.tsx  BacktestResults.tsx
frontend/src/hooks/: useBacktest.ts
frontend/src/utils/: colors.ts  formatters.ts
src/data/: fetcher.py
src/engine/: backtest.py  portfolio.py  signals.py
src/ui/: app.py  charts.py  sidebar.py  tables.py
tests/: test_backtest.py  test_portfolio.py  test_signals.py
